# zoe-project

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  install_open62541.sh  prj.conf  west.yml
boards/: esp32.overlay
docs/: setup.md
src/: atomic_stub_riscv.c  main.c  open62541.h
